unpackaged/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Explanation__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Explanation__c</fullName>
    <description>Provide sales reps with an explanation of this pricing guidance and recommendations for discounts to provide. They can view this explanation with the pricing guidance in the quote line editor.</description>
    <inlineHelpText>Donne aux commerciaux une explication de ce prix indicatif et des recommandations sur les remises à fournir. Ils peuvent afficher cette explication avec les prix indicatifs dans l&#39;éditeur de ligne de devis.</inlineHelpText>
    <label>Explanation</label>
    <type>TextArea</type>
</CustomField>